DATE       AUTHOR       CHANGE
---------- --------     --------------------------------------------------------
2002-09-20 nonchocoboy  NEW VERSION: 0.1.9
2002-09-15 subatomic    added Math::clamp
2002-09-11 allenb       CoordQuat fixed so that it can be instantiated.
2002-08-06 subatomic    added intersection test between point3 and AAbox
                        NEW VERSION: 0.1.8
2002-07-28 nonchocoboy  Added basic intersection test for AABoxes.
                        NEW VERSION: 0.1.7
2002-07-11 allenb       Added static assert.  Added muli-arg constructor for
                        Coord.  Created Util directory.  Added new coord types.
                        NEW VERSION: 0.1.6
2002-07-04 allenb       Bump up version since it all seems to work well now.
                        NEW VERSION: 0.1.0
2002-06-23 subatomic    For safety, don't allow Quat(T,T,T,T) default 
                        constructor.  Added Quat(), and changed Quat(T,T,T,T)
                        which to not use defaults.
2002-06-13 subatomic    For safety, don't allow VecBase(DATA_TYPE) constructor.
                        Also don't allow mismatched constructors such as
                        Vec3( a, b ), or Vec2( a, b, c ), these will assert now.
2002-06-12 subatomic    EulerAngle is templatized on RotationOrder now.
                        This means that EulerXYZ and EulerZYX are discrete types
                        which will allow the benefit of type safety and compile 
                        time optimization.
2002-06-10 subatomic    Generators all use Euler and Axis now.
                        Changed to set() and make() naming on functions
                        that were actually set (like setRot(quat,axisangle)
                        Templatized many of the Generate funcs.  Now you can
                        set(anytype, anyothertype) and make<anytype>(anyother).
                        Coord is now templatized on POS_TYPE, ROT_TYPE.